# mcp-smart-fetch

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README-CN.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
config/: config.toml
data/: Texture Data.md  glTF_2.0_Specification.md
examples/: basic_usage.rs  cleaning_demo.rs
src/: cleaner.rs  config.rs  document.rs  error.rs  lib.rs  llm_client.rs  main.rs  mcp_server.rs  prompt_template.rs
templates/: default.hbs  qa.hbs  summary.hbs
tests/: cleaning_test.rs  integration_test.rs  mcp_server_test.rs  unit_test.rs
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/animations/: advanced-particles.ts  architecture-connections.tsx  background-gradient.ts  composite-animation.tsx  features-particles.tsx  floating-elements.ts  loading-particles.ts  page-transition.tsx  particles.ts  transitions.ts
web/src/components/: Architecture.tsx  Deployment.tsx  Features.tsx  Footer.tsx  Hero.tsx  LoadingScreen.tsx  QuickStart.tsx
web/src/hooks/: useLoadingState.ts
